--- a/src/vec_config.adoc
+++ b/src/vec_config.adoc
@@ -91,53 +91,12 @@ Spike Implementation::
 https://github.com/riscv-software-src/riscv-isa-sim/blob/master/riscv/insns/vsetvl.h[]
 
 
-=== vsetvl intrinsic
+=== vsetvl Intrinsic Functions
 
-Intrinsics::
-[source,cpp]
---
-size_t __riscv_vsetvl_e8mf8 (size_t avl);
-size_t __riscv_vsetvl_e8mf4 (size_t avl);
-size_t __riscv_vsetvl_e8mf2 (size_t avl);
-size_t __riscv_vsetvl_e8m1 (size_t avl);
-size_t __riscv_vsetvl_e8m2 (size_t avl);
-size_t __riscv_vsetvl_e8m4 (size_t avl);
-size_t __riscv_vsetvl_e8m8 (size_t avl);
-size_t __riscv_vsetvl_e16mf4 (size_t avl);
-size_t __riscv_vsetvl_e16mf2 (size_t avl);
-size_t __riscv_vsetvl_e16m1 (size_t avl);
-size_t __riscv_vsetvl_e16m2 (size_t avl);
-size_t __riscv_vsetvl_e16m4 (size_t avl);
-size_t __riscv_vsetvl_e16m8 (size_t avl);
-size_t __riscv_vsetvl_e32mf2 (size_t avl);
-size_t __riscv_vsetvl_e32m1 (size_t avl);
-size_t __riscv_vsetvl_e32m2 (size_t avl);
-size_t __riscv_vsetvl_e32m4 (size_t avl);
-size_t __riscv_vsetvl_e32m8 (size_t avl);
-size_t __riscv_vsetvl_e64m1 (size_t avl);
-size_t __riscv_vsetvl_e64m2 (size_t avl);
-size_t __riscv_vsetvl_e64m4 (size_t avl);
-size_t __riscv_vsetvl_e64m8 (size_t avl);
-size_t __riscv_vsetvlmax_e8mf8 ();
-size_t __riscv_vsetvlmax_e8mf4 ();
-size_t __riscv_vsetvlmax_e8mf2 ();
-size_t __riscv_vsetvlmax_e8m1 ();
-size_t __riscv_vsetvlmax_e8m2 ();
-size_t __riscv_vsetvlmax_e8m4 ();
-size_t __riscv_vsetvlmax_e8m8 ();
-size_t __riscv_vsetvlmax_e16mf4 ();
-size_t __riscv_vsetvlmax_e16mf2 ();
-size_t __riscv_vsetvlmax_e16m1 ();
-size_t __riscv_vsetvlmax_e16m2 ();
-size_t __riscv_vsetvlmax_e16m4 ();
-size_t __riscv_vsetvlmax_e16m8 ();
-size_t __riscv_vsetvlmax_e32mf2 ();
-size_t __riscv_vsetvlmax_e32m1 ();
-size_t __riscv_vsetvlmax_e32m2 ();
-size_t __riscv_vsetvlmax_e32m4 ();
-size_t __riscv_vsetvlmax_e32m8 ();
-size_t __riscv_vsetvlmax_e64m1 ();
-size_t __riscv_vsetvlmax_e64m2 ();
-size_t __riscv_vsetvlmax_e64m4 ();
-size_t __riscv_vsetvlmax_e64m8 ();
---
+[%collapsible]
+====
+[source,c]
+----
+include::./intrinsic/vsetvl_intrinsic.cpp[]
+----
+====
